--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "npm": ">=10 <11"
   },
   "dependencies": {
+    "@fontsource/montserrat": "^5.2.5",
     "@heroui/react": "^2.7.2",
     "axios": "^1.7.7",
     "flowbite": "^2.5.2",
