--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@heroui/react": "^2.7.2",
     "axios": "^1.7.7",
     "flowbite": "^2.5.2",
+    "lucide-react": "^0.487.0",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
