--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@fontsource/montserrat": "^5.2.5",
     "@heroui/react": "^2.7.2",
+    "@heroui/toast": "^2.0.7",
     "axios": "^1.7.7",
     "flowbite": "^2.5.2",
     "lucide-react": "^0.487.0",
